--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -2,6 +2,9 @@
   margin: 50px auto;
   display: flex;
   justify-content: center;
+  position: fixed;
+  width: 100%;
+  z-index: 1000;
 }
 
 .links {
