--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,6 +8,7 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  scroll-behavior: smooth;
 }
 
 a,
@@ -33,4 +34,16 @@ body {
   color: var(--color-light);
   background-color: var(--color-dark);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+h2 {
+  text-transform: uppercase;
+  font-size: 24px;
+  font-weight: 400;
+}
+
+@media (max-width: 767px) {
+  h2 {
+    font-size: 16px;
+  }
 }
