--- a/src/components/header/nav-link/nav-link.module.scss
+++ b/src/components/header/nav-link/nav-link.module.scss
@@ -1,6 +1,7 @@
 .link {
-  font-size: 20px;
+  font-size: 16px;
   border-bottom: 2px solid transparent;
+  text-transform: uppercase;
   transition: all var(--transition-duration);
 
   &:hover,
